Updating index page. Global Justice Concert passed.
Also, for some reason, I left my renemer program in here. Gone now.

--- a/clubs/index.html
+++ b/clubs/index.html
@@ -169,7 +169,6 @@
 					<div class = "row-fluid">
 						<div class = "span11 offset1" style = "font-size:15px; margin-right: 0px;">
 							<ul>
-								<li> Global Justice Concert: March 1st @ 7pm</li>
                                 <li> SADD and Interact will be hosting a Blood Drive on Tuesday, April 16th in the MPR.</li>
 							</ul>
 						</div>
@@ -178,9 +177,8 @@
 			</div>
     	</div>
     </div>
-    <div>
 </div>
-<div style = margin-bottom:20px></div>		
+<div style = "margin-bottom:20px"></div>		
 	<div id="footer" style = "margin:auto; position: absolute; bottom: 0;">
 	
 		<!--#include virtual="/harbingernews/tools/footer.shtml"-->
