--- a/clubs/index.html
+++ b/clubs/index.html
@@ -164,7 +164,7 @@
 	<div>
 		<div>
 			<div>
-				<div  id = "announcements"> <!--Begins announcements part of the page-->
+				<div  id = "announcements" class = "span9" style="float: left; margin-bottom: 10px;"> <!--Begins announcements part of the page-->
 					<h1>Club Announcements</h1>
 					<div class = "row-fluid">
 						<div class = "span11 offset1" style = "font-size:15px; margin-right: 0px;">
@@ -178,8 +178,8 @@
     	</div>
     </div>
 </div>
-<div style = "margin-bottom:20px"></div>		
-	<div id="footer" style = "margin:auto; position: absolute; bottom: 0;">
+<div style = "margin-bottom:20px; position: static; clear: both;">		
+	<div id="footer" style = "position: relative; top: 100%">
 	
 		<!--#include virtual="/harbingernews/tools/footer.shtml"-->
 				
@@ -189,6 +189,6 @@
 			</div>
 		</div>
 	</div> <!-- end "footer" -->
-
+</div>
 </body>
 </html>
