Updated for the computer club

--- a/clubs/index.html
+++ b/clubs/index.html
@@ -138,6 +138,7 @@
                         <li><a href="Forensics Club/Forensics Club.php">Forensics Club</a></li>
                         <li><a href="Engineering and Science Club/Engineering and Science Club.php">Science and Engineering</a></li>
                         <li><a href="Technology Club/Technology Club.php">Technology Club</a></li>
+                        <li><a href="Mobile Computer Club/Mobile Computer Club.php">Mobile Computer Club</a></li>
                     </ul>
                 </li><!--Ends dropdown menu-->
 
