Added announcement for Ambro

--- a/clubs/index.html
+++ b/clubs/index.html
@@ -170,6 +170,7 @@
 					<div class = "row-fluid">
 						<div class = "span11 offset1" style = "font-size:15px; margin-right: 0px;">
 							<ul>
+							<li>We need more content for the club pages! If you have any information for us, e-mail Mr. Ambrosio at <a href="mailto:ambrosiov@harborfieldscsd.org">ambrosiov@harborfieldscsd.org</a></li>
                                 <li> SADD and Interact will be hosting a Blood Drive on Tuesday, April 16th in the MPR.</li>
 							</ul>
 						</div>
